Improve maven test run setup Remove gradle reference